# 6s-bin

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  pyproject.toml
.github/workflows/: build.yaml  download_artifact.yaml  download_cache.yaml  release.yaml  test.yaml  web_artifact.yaml  web_download.yaml
src/sixs_bin/: __init__.py  _cli.py  _installer.py
test/: conftest.py  test_6s.py  test_cli.py
test/data/: manual_input.txt
