[tool.poetry]
name = "6s-bin"
version = "0.3.0"
description = "Wrapper for a local 6S binary."
authors = ["Brian Schubert <schubert.b@northeastern.edu>"]
readme = "README.md"
packages = [
    { from = "src", include = "sixs_bin" }
]
include = [
    "src/sixs_bin/sixsV1.1"
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
py6s = { version = "^1.9.2", optional = true }
# Undeclared dependency of Py6S
python-dateutil = { version = "^2.8.2", optional = true }

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pytest = "^7.4.0"
py6s = "^1.9.2"

[tool.poetry.extras]
wrapper = ["py6s", "python-dateutil"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Black config.
[tool.black]
# How many characters per line to allow.
# https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 88
# Don't skip skip temporary sanity checks.
safe = true
# Python versions that should be supported by Black's output.
target-version = ["py39"]
# Set to true to preview style changes that may be added in black's next major release.
preview = false

# isort config.
[tool.isort]
profile = "black"

# mypy config.
[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "Py6S.*"
ignore_missing_imports = true
